Fixed layout issues on the testimonials section

--- a/src/Components/ServicesSection/ServicesSection.scss
+++ b/src/Components/ServicesSection/ServicesSection.scss
@@ -1,23 +1,11 @@
 .services-section {
   padding: 200px;
-  padding-top: 0px;
-  @media (max-width: 924px) {
-    margin: 0 50px;
-  }
-  @media (max-width: 598px) {
-    padding: 0;
-    padding-bottom: 50px;
-  }
+  // padding-top: 0px;
 }
 
 .services-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 50px;
-  @media (max-width: 598px) {
-    padding: 0;
-    margin: 0;
-    padding-top: 50px;
-  }
+  // padding: 50px;
 }
