--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -53,7 +53,7 @@
         }
 
         .text-side {
-          flex: 4;
+          // flex: 4;
           height: 100%;
           display: flex;
           align-items: center;
@@ -224,9 +224,15 @@
   }
 }
 
-@media (min-width: 600px) and (max-width: 1099px) {
+@media (min-width: 600px) and (max-width: 799px) {
   .testimonials-section {
-    height: 160vh;
+    height: 155vh;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1099px) {
+  .testimonials-section {
+    height: 165vh;
   }
 }
 
